--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
           </ul>
         </nav>
         <ul class="contact-list list">
-          <li>
+          <li class="contact-link-item">
+            <svg class="contact-icon" width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+              >
+            </svg>
             <a href="mailto:info@devstudio.com" class="contact-list-mail link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-link-item">
+            <svg class="contact-icon" width="10" height="16">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+              >
+            </svg>
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -62,6 +70,11 @@
           <h2 hidden>Особенности</h2>
           <ul class="feature-list list">
             <li class="feature-list-item">
+              <div class="feature-list-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="feature-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -69,6 +82,12 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="feature-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="feature-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -76,6 +95,11 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
               <p class="feature-text">
                 Равным образом консультация с широким активом в значительной
@@ -83,6 +107,11 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="feature-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -139,6 +168,36 @@
               <div class="team-list-content">
                 <h3 class="title-team">Игорь Демьяненко</h3>
                 <p class="team-position" lang="en">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -151,6 +210,36 @@
               <div class="team-list-content">
                 <h3 class="title-team">Ольга Репина</h3>
                 <p class="team-position" lang="en">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -163,6 +252,36 @@
               <div class="team-list-content">
                 <h3 class="title-team">Николай Тарасов</h3>
                 <p class="team-position" lang="en">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -175,7 +294,82 @@
               <div class="team-list-content">
                 <h3 class="title-team">Михаил Ермаков</h3>
                 <p class="team-position" lang="en">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link link">
+                      <svg class="social-list-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="client-list list">
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-3"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-5"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link link">
+                <svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-client-6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -183,7 +377,8 @@
     </main>
     <!-- Футер -->
     <footer>
-      <div class="container">
+      <div class="footer-container container">
+        <div class="contact-footer">
         <div class="footer-logo">
           <a class="logo-link link" href="index.html">
             <span class="logo-web">Web</span
@@ -209,6 +404,22 @@
             </li>
           </ul>
         </address>
+      </div>
+        <div class="join-container">
+          <h2 class="join-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
+        <ul class="join-list list">
+          <li>
+            <a href="" class="join-footer-link">
+              <svg class="join-icon"><use href="./images/sprite.svg#icon-instagram""> </use> </svg> </a>
+          </li>
+          <li>
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-twitter""> </use> </svg> </a> </li>
+          <li >
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-facebook""> </use> </svg> </a> </li>
+          <li>
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-linkedin""> </use> </svg> </a> </li>
+        </ul>
+        </div>
       </div>
     </footer>
   </body>
