--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,20 @@
           </ul>
         </nav>
         <ul class="contact-list list">
-          <li>
+          <li class="contact-link-item">
+            <svg class="contact-icon" width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+              >
+            </svg>
             <a href="mailto:info@devstudio.com" class="contact-list-mail link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-link-item">
+            <svg class="contact-icon" width="10" height="16">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+              >
+            </svg>
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -176,7 +184,8 @@
     </main>
     <!-- Футер -->
     <footer>
-      <div class="container">
+      <div class="footer-container container">
+        <div class="contact-footer">
         <div class="footer-logo">
           <a class="logo-link link" href="index.html">
             <span class="logo-web">Web</span
@@ -202,6 +211,22 @@
             </li>
           </ul>
         </address>
+      </div>
+        <div class="join-container">
+          <h2 class="join-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
+        <ul class="join-list list">
+          <li>
+            <a href="" class="join-footer-link">
+              <svg class="join-icon"><use href="./images/sprite.svg#icon-instagram""> </use> </svg> </a>
+          </li>
+          <li>
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-twitter""> </use> </svg> </a> </li>
+          <li >
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-facebook""> </use> </svg> </a> </li>
+          <li>
+            <a href="" class="join-footer-link"> <svg class="join-icon"> <use href="./images/sprite.svg#icon-linkedin""> </use> </svg> </a> </li>
+        </ul>
+        </div>
       </div>
     </footer>
   </body>
