--- a/index.html
+++ b/index.html
@@ -35,20 +35,14 @@
         </nav>
         <ul class="contact-list list">
           <li class="contact-link-item">
-            <svg class="contact-icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope"></use>
-              >
-            </svg>
-            <a href="mailto:info@devstudio.com" class="contact-list-mail link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contact-link link"> <svg class="contact-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg> info@devstudio.com </a>
           </li>
           <li class="contact-link-item">
-            <svg class="contact-icon" width="10" height="16">
+            <a href="tel:+380961111111" class="contact-link link"> <svg class="contact-icon" width="10" height="16">
               <use href="./images/sprite.svg#icon-smartphone"></use>
-              >
-            </svg>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </svg> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
