--- a/portfolio.html
+++ b/portfolio.html
@@ -35,20 +35,14 @@
         </nav>
         <ul class="contact-list list">
           <li class="contact-link-item">
-            <svg class="contact-icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope"></use>
-              >
-            </svg>
-            <a href="mailto:info@devstudio.com" class="contact-list-mail link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contact-link link"> <svg class="contact-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg> info@devstudio.com </a>
           </li>
           <li class="contact-link-item">
-            <svg class="contact-icon" width="10" height="16">
+            <a href="tel:+380961111111" class="contact-link link"> <svg class="contact-icon" width="10" height="16">
               <use href="./images/sprite.svg#icon-smartphone"></use>
-              >
-            </svg>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </svg> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -79,18 +73,18 @@
               <div class="porfolio-list-content">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p class="portfolio-text">Веб-сайт</p>
-              </div>
+            </div>
             </li>
-            <li class="portfolio-list-img">
-              <img
-                src="./images/projects/project-img-2.jpg"
-                alt="Постер с баскетболистами"
-              />
-              <div class="porfolio-list-content">
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-text">Дизайн</p>
+              <li class="portfolio-list-img">
+                <img
+                  src="./images/projects/project-img-2.jpg"
+                  alt="Постер с баскетболистами"
+                />
+                <div class="porfolio-list-content">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-list-img">
@@ -106,6 +100,7 @@
                 <p class="portfolio-text">Приложение</p>
               </div>
             </li>
+
             <li class="portfolio-list-img">
               <img
                 src="./images/projects/project-img-4.jpg"
@@ -118,6 +113,7 @@
                 <p class="portfolio-text">Маркетинг</p>
               </div>
             </li>
+
             <li class="portfolio-list-img">
               <img
                 src="./images/projects/project-img-5.jpg"
@@ -130,6 +126,7 @@
                 <p class="portfolio-text">Приложение</p>
               </div>
             </li>
+
             <li class="portfolio-list-img">
               <img
                 src="./images/projects/project-img-6.jpg"
@@ -139,9 +136,10 @@
               />
               <div class="porfolio-list-content">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+                <p class="portfolio-text">Веб-сайт</p> 
               </div>
             </li>
+
             <li class="portfolio-list-img">
               <img
                 src="./images/projects/project-img-7.jpg"
